# pdfmarker

./: README.md  pyproject.toml  usage.py
.github/workflows/: ci.yml  release.yml
pdfmarker/: colors.py  pdfmarker.py
tests/: test_colors.py  test_pdfmarker.py
