[tool.poetry]
name = "pdfmarker"
version = "0.1.0"
description = "Simple tool to add highlights/markers to pdf documents."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
