[tool.poetry]
name = "pdfmarker"
version = "0.1.0"
description = "Simple tool to add highlights/markers to pdf documents."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
PyMuPDF = "^1.24.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
